# Kanban

./: db.sqlite3  pyproject.toml  requirements.txt
core/: schema.py  settings.py  urls.py
orders/: admin.py  models.py  schema.py
orders/migrations/: 0001_initial.py  0002_refreshtoken.py
